--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
+    "log4js": "^2.5.3",
     "mysql": "^2.15.0"
   }
 }
