--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "log4js": "^2.5.3",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "nunjucks": "^3.1.2"
   }
 }
