--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.5.0",
+    "koa-body": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-mysql": "^1.0.3",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "log4js": "^2.5.3",
     "mysql": "^2.15.0",
-    "nunjucks": "^3.1.2"
+    "nodemon": "^1.17.1",
+    "nunjucks": "^3.1.2",
+    "sequelize": "^4.35.1"
   }
 }
