--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-static": "^4.0.2",
     "log4js": "^2.5.3",
     "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
     "nodemon": "^1.17.1",
     "nunjucks": "^3.1.2",
     "sequelize": "^4.35.1"
